--- a/MovieRental/MovieRental.csproj
+++ b/MovieRental/MovieRental.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Migrations\202212231644179_PopulateGenres.designer.cs">
       <DependentUpon>202212231644179_PopulateGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301301759559_ApplyDataAnnotationToMovieModel.cs" />
+    <Compile Include="Migrations\202301301759559_ApplyDataAnnotationToMovieModel.designer.cs">
+      <DependentUpon>202301301759559_ApplyDataAnnotationToMovieModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -339,6 +343,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202212231644179_PopulateGenres.resx">
       <DependentUpon>202212231644179_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301301759559_ApplyDataAnnotationToMovieModel.resx">
+      <DependentUpon>202301301759559_ApplyDataAnnotationToMovieModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
